--- a/.travis.yml
+++ b/.travis.yml
@@ -15,13 +15,25 @@ before_script:
 
   - composer self-update
 
-  - composer install --no-interaction --prefer-source
+  - composer install --no-progress --no-suggest --no-interaction --optimize-autoloader
 
   - php artisan key:generate
 
-  - php artisan migrate
+  - npm install
+  
+  - npm rebuild node-sass
+  
+  - npm run production
+  
+  - php artisan migrate --seed
 
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - ./vendor/laravel/dusk/bin/chromedriver-linux &
+  - php artisan serve > /dev/null 2>&1 &
 
 script:
 
   - vendor/bin/phpunit
+
+  - php artisan dusk
