--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,7 @@ before_script:
   
   - php artisan migrate --seed
 
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-  - ./vendor/laravel/dusk/bin/chromedriver-linux &
-  - php artisan serve > /dev/null 2>&1 &
+  - php artisan serve
 
 script:
 
