--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "laravel/dusk": "^6.18",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.3",
+        "phpunit/php-code-coverage": "^7.0",
         "phpunit/phpunit": "^8.5.8|^9.3.3"
     },
     "config": {
